--- a/www/web-gui/public/index.html
+++ b/www/web-gui/public/index.html
@@ -24,7 +24,7 @@
 </div>
 
 <div class="ui main container" id="content">
-	<balance-table address="mmx1nn8u9etvnghq7x8atj2y55he76z9yvxalc9t3nx8ym0xqr4yuzvsdf8jp8"></balance-table>
+	<wallet-summary></wallet-summary>
 </div>
 
 
