--- a/www/web-gui/public/index.html
+++ b/www/web-gui/public/index.html
@@ -7,29 +7,19 @@
 <script src="js/semantic.min.js"></script>
 <script src="https://unpkg.com/vue@3"></script>
 <script src="https://unpkg.com/vue-router@4"></script>
+<script src="index.js" defer></script>
 <title>MMX - GUI</title>
 </head>
 
 <body>
 <div id="content">
 
-<div class="ui large top menu">
-	<div class="ui container">
-		<router-link class="item" to="/wallet/">Wallet</router-link>
-		<router-link class="item" to="/exchange/">Exchange</router-link>
-		<div class="right menu">
-			<div class="item">
-				<router-link class="ui button" to="/settings/">Settings</router-link>
-			</div>
-		</div>
-	</div>
-</div>
+<main-menu></main-menu>
 
 <div class="ui main container">
-	<router-view/>
+	<router-view></router-view>
 </div>
 
 </div>
-<script src="index.js"></script>
 </body>
 </html>
