padding-bottom: 100px

--- a/www/web-gui/public/index.html
+++ b/www/web-gui/public/index.html
@@ -9,6 +9,11 @@
 <script src="https://unpkg.com/vue-router@4"></script>
 <script src="index.js" defer></script>
 <title>MMX - GUI</title>
+<style>
+#content {
+	padding-bottom: 100px
+}
+</style>
 </head>
 
 <body>
