--- a/www/web-gui/public/index.html
+++ b/www/web-gui/public/index.html
@@ -2,9 +2,9 @@
 <html>
 <head>
 <meta charset="UTF-8">
-<link rel="stylesheet" type="text/css" href="css/semantic.min.css">
+<link rel="stylesheet" type="text/css" href="assets/semantic.min.css">
 <script src="https://code.jquery.com/jquery-3.1.1.min.js"></script>
-<script src="js/semantic.min.js"></script>
+<script src="assets/semantic.min.js"></script>
 <script src="https://unpkg.com/vue@3"></script>
 <script src="https://unpkg.com/vue-router@4"></script>
 <script src="index.js" defer></script>
