node info in gui

--- a/www/web-gui/public/index.html
+++ b/www/web-gui/public/index.html
@@ -8,6 +8,7 @@
 <script src="https://unpkg.com/vue@3"></script>
 <script src="https://unpkg.com/vue-router@4"></script>
 <script src="index.js" defer></script>
+<script src="node.js" defer></script>
 <script src="wallet.js" defer></script>
 <script src="explorer.js" defer></script>
 <script src="exchange.js" defer></script>
