--- a/www/web-gui/public/index.html
+++ b/www/web-gui/public/index.html
@@ -4,6 +4,7 @@
 <meta charset="UTF-8">
 <link rel="stylesheet" type="text/css" href="assets/semantic.min.css">
 <script src="https://code.jquery.com/jquery-3.1.1.min.js"></script>
+<script src="assets/plotly-2.9.0.min.js"></script>
 <script src="assets/semantic.min.js"></script>
 <script src="https://unpkg.com/vue@3"></script>
 <script src="https://unpkg.com/vue-router@4"></script>
@@ -12,6 +13,7 @@
 <script src="wallet.js" defer></script>
 <script src="explorer.js" defer></script>
 <script src="exchange.js" defer></script>
+<script src="vue-plotly.js" defer></script>
 <script src="mount.js" defer></script>
 <title>MMX - GUI</title>
 <style>
