gui timelord setting

--- a/www/web-gui/public/index.html
+++ b/www/web-gui/public/index.html
@@ -13,6 +13,7 @@
 <script src="wallet.js" defer></script>
 <script src="explorer.js" defer></script>
 <script src="exchange.js" defer></script>
+<script src="settings.js" defer></script>
 <script src="vue-plotly.js" defer></script>
 <script src="mount.js" defer></script>
 <title>MMX - GUI</title>
