farm info in gui

--- a/www/web-gui/public/index.html
+++ b/www/web-gui/public/index.html
@@ -13,6 +13,7 @@
 <script src="index.js" defer></script>
 <script src="node.js" defer></script>
 <script src="wallet.js" defer></script>
+<script src="farmer.js" defer></script>
 <script src="market.js" defer></script>
 <script src="explorer.js" defer></script>
 <script src="exchange.js" defer></script>
