--- a/www/web-gui/public/index.html
+++ b/www/web-gui/public/index.html
@@ -1,50 +1,36 @@
-<!DOCTYPE html>
 <html>
 <head>
-<meta charset="UTF-8">
-<link rel="stylesheet" type="text/css" href="assets/semantic.min.css">
-<script src="https://code.jquery.com/jquery-3.1.1.min.js"></script>
-<script src="assets/plotly-2.9.0.min.js"></script>
-<script src="assets/semantic.min.js"></script>
-<script src="https://unpkg.com/vue@3"></script>
-<script src="https://unpkg.com/vue-router@4"></script>
-<script src="https://unpkg.com/vue-i18n@9"></script>
+    <link href="https://fonts.googleapis.com/css?family=Roboto:100,300,400,500,700,900" rel="stylesheet">
+    <link href="https://cdn.jsdelivr.net/npm/@mdi/font@6.x/css/materialdesignicons.min.css" rel="stylesheet">
+    <link href="https://cdn.jsdelivr.net/npm/vuetify@2.6.9/dist/vuetify.min.css" rel="stylesheet">
+    <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no, minimal-ui">
 
-<script src="index.js" defer></script>
-<script src="node.js" defer></script>
-<script src="wallet.js" defer></script>
-<script src="farmer.js" defer></script>
-<script src="market.js" defer></script>
-<script src="explorer.js" defer></script>
-<script src="exchange.js" defer></script>
-<script src="settings.js" defer></script>
-<script src="vue-plotly.js" defer></script>
+    <script src="https://cdn.jsdelivr.net/npm/vue@2.7.8/dist/vue.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/vue-i18n@8.27.1/dist/vue-i18n.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/vue-router@3.5.4/dist/vue-router.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/vuetify@2.6.9/dist/vuetify.min.js"></script>
 
-<script src="locales/en.js" defer></script>
-<script src="i18n.utils.js" defer></script>
+    <script src="index.js" defer></script>
+    <script src="node.js" defer></script>
+    <script src="farmer.js" defer></script>
 
-<script src="mount.js" defer></script>
-<title>MMX - GUI</title>
-<style>
-#content {
-	padding-bottom: 100px
-}
-.label:before {
-    content: "";
-    display: block;
-}
-</style>
+    <script src="locales/en.js" defer></script>
+    <script src="i18n.utils.js" defer></script>
+
+    <script src="mount.js" defer></script> 
 </head>
-
 <body>
-<div id="content">
 
-<main-menu></main-menu>
+    <div id="app">
+        <v-app>
+            <v-main>                
+                <v-container class="pt-0">
+                    <main-menu></main-menu>
+                    <router-view></router-view>
+                </v-container>
+            </v-main>
+        </v-app>
+    </div>
 
-<div class="ui main container">
-	<router-view></router-view>
-</div>
-
-</div>
 </body>
 </html>
