--- a/www/web-gui/public/index.html
+++ b/www/web-gui/public/index.html
@@ -13,6 +13,7 @@
     <script src="index.js" defer></script>
     <script src="node.js" defer></script>
     <script src="farmer.js" defer></script>
+    <script src="explorer.js" defer></script>
 
     <script src="locales/en.js" defer></script>
     <script src="i18n.utils.js" defer></script>
