--- a/www/web-gui/public/index.html
+++ b/www/web-gui/public/index.html
@@ -31,6 +31,12 @@
         .theme--dark.v-data-table tbody tr:nth-of-type(even) {
             background-color: rgba(0, 0, 0, .5);
         }
+        .no-padding .v-toolbar__content {
+            padding-left: 0px;
+            padding-right: 0px;
+        }
+</style>
+
     </style>
         
 </head>
