--- a/www/web-gui/public/index.html
+++ b/www/web-gui/public/index.html
@@ -1,6 +1,8 @@
 <!DOCTYPE html>
 <html>
 <head>
+    <title>MMX-GUI</title>
+
     <link href="https://fonts.googleapis.com/css?family=Roboto:100,300,400,500,700,900" rel="stylesheet">
     <link href="https://cdn.jsdelivr.net/npm/@mdi/font@6.x/css/materialdesignicons.min.css" rel="stylesheet">
     <link href="https://cdn.jsdelivr.net/npm/vuetify@2.6.9/dist/vuetify.min.css" rel="stylesheet">
@@ -38,6 +40,9 @@
         .no-padding .v-toolbar__content {
             padding-left: 0px;
             padding-right: 0px;
+        }
+        .text-align-right .v-text-field__slot input {
+            text-align: right;
         }
     </style>
         
