node-info redesign

--- a/www/web-gui/public/index.html
+++ b/www/web-gui/public/index.html
@@ -8,10 +8,13 @@
     <link href="https://cdn.jsdelivr.net/npm/vuetify@2.6.9/dist/vuetify.min.css" rel="stylesheet">
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no, minimal-ui">
 
-    <script src="https://cdn.jsdelivr.net/npm/vue@2.7.8/dist/vue.min.js"></script>
+    <!--script src="https://cdn.jsdelivr.net/npm/vue@2.7.10/dist/vue.min.js"></script-->
+    <script src="https://cdn.jsdelivr.net/npm/vue@2.7.10/dist/vue.common.dev.js"></script>
+
     <script src="https://cdn.jsdelivr.net/npm/vue-i18n@8.27.1/dist/vue-i18n.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/vue-router@3.5.4/dist/vue-router.min.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/vuetify@2.6.9/dist/vuetify.min.js"></script>
+    <!--script src="https://cdn.jsdelivr.net/npm/vuetify@2.6.9/dist/vuetify.min.js"></script-->
+    <script src="https://cdn.jsdelivr.net/npm/vuetify@2.6.9/dist/vuetify.js"></script>
 
     <script src="assets/plotly-2.9.0.min.js"></script>
     <script src="vue-plotly.js" defer></script>
