--- a/www/web-gui/public/index.html
+++ b/www/web-gui/public/index.html
@@ -22,6 +22,7 @@
     <script src="farmer.js" defer></script>
     <script src="wallet.js" defer></script>
     <script src="explorer.js" defer></script>
+    <script src="market.js" defer></script>
     <script src="settings.js" defer></script>
         
 
