table odd row color

--- a/www/web-gui/public/index.html
+++ b/www/web-gui/public/index.html
@@ -32,10 +32,10 @@
 
 
     <style>
-        .theme--light.v-data-table tbody tr:nth-of-type(even) {
+        .theme--light.v-data-table tbody tr:nth-of-type(odd) {
             background-color: rgba(0, 0, 0, .03);
         }
-        .theme--dark.v-data-table tbody tr:nth-of-type(even) {
+        .theme--dark.v-data-table tbody tr:nth-of-type(odd) {
             background-color: rgba(0, 0, 0, .5);
         }
         .no-padding .v-toolbar__content {
