--- a/www/web-gui/public/index.html
+++ b/www/web-gui/public/index.html
@@ -45,8 +45,18 @@
         .text-align-right .v-text-field__slot input {
             text-align: right;
         }
-    </style>
+        .key-cell {
+            min-width:150px; 
+            width:5%;
+        }
+        .theme--dark .key-cell{
+            background-color: black;
+        }
+        .theme--light .key-cell{
+            background-color: #EEEEEE;
+        }        
         
+    </style>        
 </head>
 <body>
 
