--- a/www/web-gui/public/index.html
+++ b/www/web-gui/public/index.html
@@ -28,7 +28,7 @@
 
     <script src="locales/en.js" defer></script>
     <script src="i18n.utils.js" defer></script>
-    <script src="mount.js" defer></script> 
+    <script src="mount.js" defer></script>
 
 
     <style>
@@ -54,25 +54,28 @@
         }
         .theme--light .key-cell {
             background-color: #EEEEEE;
-        }        
-        
-    </style>        
+        }
+        .v-tabs-bar {
+            background-color: transparent !important;
+        }
+    </style>
 </head>
 <body>
-
     <div id="app">
-        <v-app>
-            <v-app-bar app>
-                <main-menu></main-menu>
+        <v-app>            
+            <v-app-bar app dense>
+                <v-container>
+                        <main-menu></main-menu>                    
+                </v-container>
             </v-app-bar>
             <v-main>
-                <v-container fluid>
+                <v-container>
                     <router-view></router-view>
                 </v-container>
             </v-main>
             <v-footer app>
             </v-footer>
-          </v-app>
+        </v-app>
     </div>
 
 </body>
