--- a/www/web-gui/public/index.html
+++ b/www/web-gui/public/index.html
@@ -25,9 +25,10 @@
     <script src="market.js" defer></script>
     <script src="settings.js" defer></script>
         
-
+    <script src="locales/common.js" defer></script>
     <script src="locales/en.js" defer></script>
     <script src="i18n.utils.js" defer></script>
+    
     <script src="mount.js" defer></script>
 
 
