--- a/www/web-gui/public/index.html
+++ b/www/web-gui/public/index.html
@@ -5,17 +5,16 @@
 
     <link href="https://fonts.googleapis.com/css?family=Roboto:100,300,400,500,700,900" rel="stylesheet">
     <link href="https://cdn.jsdelivr.net/npm/@mdi/font@6.x/css/materialdesignicons.min.css" rel="stylesheet">
-    <link href="https://cdn.jsdelivr.net/npm/vuetify@2.6.9/dist/vuetify.min.css" rel="stylesheet">
+    <link href="https://cdn.jsdelivr.net/npm/vuetify@2.6.10/dist/vuetify.min.css" rel="stylesheet">
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no, minimal-ui">
 
-    <script src="https://cdn.jsdelivr.net/npm/vue@2.7.8/dist/vue.min.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/vue-i18n@8.27.1/dist/vue-i18n.min.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/vue-router@3.5.4/dist/vue-router.min.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/vuetify@2.6.9/dist/vuetify.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/vue@2.7.10/dist/vue.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/vue-i18n@8.27.2/dist/vue-i18n.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/vue-router@3.6.5/dist/vue-router.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/vuetify@2.6.10/dist/vuetify.min.js"></script>
 
     <script src="assets/plotly-2.9.0.min.js"></script>
     <script src="vue-plotly.js" defer></script>
-
 
     <script src="index.js" defer></script>
     <script src="node.js" defer></script>
@@ -29,6 +28,8 @@
     <script src="locales/en.js" defer></script>
     <script src="i18n.utils.js" defer></script>
     
+    <script src="components/seed.js" defer></script>
+
     <script src="mount.js" defer></script>
 
 
