--- a/www/web-gui/public/index.html
+++ b/www/web-gui/public/index.html
@@ -2,6 +2,7 @@
 <html>
 <head>
     <title>MMX-GUI</title>
+    <link rel="icon" type="image/x-icon" href="/gui/favicon.ico">
 
     <link href="https://fonts.googleapis.com/css?family=Roboto:100,300,400,500,700,900" rel="stylesheet">
     <link href="https://cdn.jsdelivr.net/npm/@mdi/font@6.x/css/materialdesignicons.min.css" rel="stylesheet">
