--- a/www/web-gui/public/index.html
+++ b/www/web-gui/public/index.html
@@ -23,6 +23,7 @@
     <script src="wallet.js" defer></script>
     <script src="explorer.js" defer></script>
     <script src="market.js" defer></script>
+    <script src="swap.js" defer></script>
     <script src="settings.js" defer></script>
         
     <script src="locales/common.js" defer></script>
