HTML <meta charset="utf-8">

--- a/www/web-gui/public/index.html
+++ b/www/web-gui/public/index.html
@@ -2,6 +2,7 @@
 <html>
 <head>
     <title>MMX-GUI</title>
+    <meta charset="utf-8">
     <link rel="icon" type="image/x-icon" href="/gui/favicon.ico">
 
     <link href="https://fonts.googleapis.com/css?family=Roboto:100,300,400,500,700,900" rel="stylesheet">
