self hosted materialdesignicons

--- a/www/web-gui/public/index.html
+++ b/www/web-gui/public/index.html
@@ -6,7 +6,7 @@
     <link rel="icon" type="image/x-icon" href="/gui/favicon.ico">
 
     <link href="assets/fonts/roboto/roboto.css" rel="stylesheet">
-    <link href="https://cdn.jsdelivr.net/npm/@mdi/font@6.x/css/materialdesignicons.min.css" rel="stylesheet">
+    <link href="assets/fonts/materialdesignicons/materialdesignicons.min.css" rel="stylesheet">
     <link href="https://cdn.jsdelivr.net/npm/vuetify@2.6.15/dist/vuetify.min.css" rel="stylesheet">
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no, minimal-ui">
 
